src/test/ui/rfc1598-generic-associated-types/pointer_family.stderr
warning: the feature `generic_associated_types` is incomplete and may cause the compiler to crash
  --> $DIR/pointer_family.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0109]: type arguments are not allowed for this type
  --> $DIR/pointer_family.rs:37:21
   |
LL |     bar: P::Pointer<String>,
   |                     ^^^^^^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/pointer_family.rs:12:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T>;
   |                                          ^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/pointer_family.rs:20:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T> {
   |                                          ^ type argument not allowed

error[E0109]: type arguments are not allowed for this type
  --> $DIR/pointer_family.rs:30:42
   |
LL |     fn new<T>(value: T) -> Self::Pointer<T> {
   |                                          ^ type argument not allowed

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0109`.
